# The-Gaming-Gauntlet

./: .gitignore  .travis.yml  CMakeList.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  Documentation  Gaunlet.h  Joystick_8_conv.cpp  README.md  main.cpp
Gaunlet_class/: Gaunlet.cpp
Gaunlet_class/tests/: CMakeLists.txt  GaunletTest.cpp
ICM20948/: CMakeLists.txt  ads1115rpi.h  main.cpp
ICM20948/rpi_ICM20948/: CMakeLists.txt  ICM20948_Library  icm20948.cpp  icm20948.h  main.cpp  mainlib.cpp
ICM20948/rpi_ICM20948/docs/: annotated.html  annotated_dup.js  classes.html  classicm20948-members.html  classicm20948.html  files.html  files_dup.js  functions.html  functions_func.html  graph_legend.html  icm20948_8h_source.html  index.html  navtreedata.js  navtreeindex0.js
ICM20948/rpi_ICM20948/docs/pdf/: annotated.tex  classicm20948.tex  refman.tex
ICM20948/rpi_ICM20948/docs/rtf/: refman.rtf
ICM20948/rpi_ICM20948/docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js
JoyController/: CMakeLists.txt  README.md  main.cpp
JoyController/JoyLib/: CMakeLists.txt  JoyLib.cpp  JoyLib.h  JoyLibrary  doxy.md
JoyController/JoyLib/docs/: annotated.html  annotated_dup.js  classJoyLib-members.html  classJoyLib.html  classes.html  files.html  files_dup.js  functions.html  functions_func.html  graph_legend.html  index.html  joylib_8h_source.html  md_doxy.html  navtreedata.js  navtreeindex0.js  pages.html
JoyController/JoyLib/docs/pdf/: annotated.tex  classJoyLib.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
JoyController/JoyLib/docs/rtf/: refman.rtf
JoyController/JoyLib/docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  searchdata.js
JoyController/tests/: CMakeLists.txt  JoyTest.cpp
MPU6050_changes/: Example.cpp  JoyTest  JoyTest.cpp  JoyTest.cpp.save  MPU6050.cpp  MPU6050.h  Makefile  datagyroscope.csv
docs/: Gaunlet_8h_source.html  Gaunlet__class_2Gaunlet_8h_source.html  ICM20948_2rpi__ICM20948_2mainlib_8h_source.html  JoyLib_8h_source.html  ads1115rpi_8h_source.html  annotated.html  annotated_dup.js  classADS1115Printer-members.html  classADS1115Printer.html  classADS1115Printer.js  classADS1115rpi-members.html  classADS1115rpi.html  classADS1115rpi.js  classGaunlet-members.html  classGaunlet.html  classGaunlet.js  classJoyLib-members.html  classJoyLib.html  classJoyLib.js  classes.html  classicm20948-members.html  classicm20948.html  classicm20948.js  classmainlib-members.html  classmainlib.html  classmainlib.js  dir_0ee1a2303e928f45cd5b80fa804a75d0.html  files.html  (+41 more)
rpi_ICM20948/: CMakeLists.txt  icm20948.cpp  icm20948.h
(+147 files in other folders)
